	(__bswap_64): __uint64_t for unsigned 64-bit int.

2012-10-12  Andreas Schwab  <schwab@linux-m68k.org>

	* include/string.h (memmem): Declare libc hidden alias.
	* string/memmem.c (memmem): Define libc hidden alias.
	* sysdeps/unix/sysv/linux/powerpc/get_clockfreq.c: Use __open,
	__read, __close instead of open, read, close.

2012-10-11  H.J. Lu  <hongjiu.lu@intel.com>

	* string/Makefile (ifunc-tests): New macro.
	(tests-ifunc): Likewise.
	(tests): Add $(tests-ifunc).
	* string/test-memccpy.c (TEST_NAME): New macro.
	* string/test-memchr.c (TEST_NAME): Likewise.
	* string/test-memcmp.c (TEST_NAME): Likewise.
	* string/test-memcpy.c (TEST_NAME): Likewise.
	* string/test-memmem.c (TEST_NAME): Likewise.
	* string/test-memmove.c (TEST_NAME): Likewise.
	* string/test-memset.c (TEST_NAME): Likewise.
	* string/test-rawmemchr.c (TEST_NAME): Likewise.
	* string/test-stpcpy.c (TEST_NAME): Likewise.
	* string/test-stpncpy.c (TEST_NAME): Likewise.
	* string/test-strcasecmp.c (TEST_NAME): Likewise.
	* string/test-strcasestr.c (TEST_NAME): Likewise.
	* string/test-strcat.c (TEST_NAME): Likewise.
	* string/test-strchr.c (TEST_NAME): Likewise.
	* string/test-strcmp.c(TEST_NAME): Likewise.
	* string/test-strcpy.c (TEST_NAME): Likewise.
	* string/test-strcspn.c (TEST_NAME): Likewise.
	* string/test-strlen.c (TEST_NAME): Likewise.
	* string/test-strncasecmp.c (TEST_NAME): Likewise.
	* string/test-strncmp.c (TEST_NAME): Likewise.
	* string/test-strncpy.c (TEST_NAME): Likewise.
	* string/test-strnlen.c (TEST_NAME): Likewise.
	* string/test-strpbrk.c (TEST_NAME): Likewise.
	* string/test-strrchr.c (TEST_NAME): Likewise.
	* string/test-strspn.c (TEST_NAME): Likewise.
	* string/test-strstr.c (TEST_NAME): Likewise.
	* string/test-bcopy-ifunc.c: New file.
	* string/test-bzero-ifunc.c: Likewise.
	* string/test-memccpy-ifunc.c: Likewise.
	* string/test-memchr-ifunc.c: Likewise.
	* string/test-memcmp-ifunc.c: Likewise.
	* string/test-memcpy-ifunc.c: Likewise.