@@ -1,0 +1,2 @@
+#define TEST_IFUNC 1
+#include "test-wmemcmp.c"
